--- a/pom.xml
+++ b/pom.xml
@@ -1645,6 +1645,11 @@
             </dependency>
             <dependency>
                 <groupId>com.nemesis.platform.module.widget</groupId>
+                <artifactId>nemesis-widget-dynamicform</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.nemesis.platform.module.widget</groupId>
                 <artifactId>nemesis-widget-banner</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
