--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,7 @@
         <java.version>1.8</java.version>
         <javamoney.version>1.1</javamoney.version>
         <jackson-datatype-money.version>1.0.1</jackson-datatype-money.version>
-        <!--jackson.version>2.9.6-SNAPSHOT</jackson.version-->
+        <jackson.version>2.9.6</jackson.version>
         <javauom.version>1.0</javauom.version>
         <javauom-ri.version>1.2</javauom-ri.version>
         <javauom-si.version>0.8</javauom-si.version>
