--- a/pom.xml
+++ b/pom.xml
@@ -175,8 +175,9 @@
         <!--hibernate.version>1.2.2</hazelcast-hibernate.version-->
         <!--infinispan.version>8.1.0.Final</infinispan.version-->
         <java.version>1.8</java.version>
+        <!-- Uprade only after jackson-datatype-money upgrade-->
         <javamoney.version>1.1</javamoney.version>
-        <jackson-datatype-money.version>1.0.1</jackson-datatype-money.version>
+        <jackson-datatype-money.version>1.0.2</jackson-datatype-money.version>
         <jackson.version>2.9.6</jackson.version>
         <javauom.version>1.0</javauom.version>
         <javauom-ri.version>1.2</javauom-ri.version>
