--- a/pom.xml
+++ b/pom.xml
@@ -320,8 +320,8 @@
         <spring-mobile.version>2.0.0.M2</spring-mobile.version>
         <!--spring-security.version>5.0.2.BUILD-20180214.212521-49</spring-security.version-->
         <spring-cloud.version>Finchley.RC1</spring-cloud.version>
-        <!--spring-hateoas.version>0.21.0.RELEASE</spring-hateoas.version-->
-        <spring-data-releasetrain.version>Kay-SR8</spring-data-releasetrain.version>
+        <spring-hateoas.version>0.25.0.BUILD-SNAPSHOT</spring-hateoas.version>
+        <spring-data-releasetrain.version>Kay-BUILD-SNAPSHOT</spring-data-releasetrain.version>
         <!--spring-session.version>1.1.1.RELEASE</spring-session.version-->
         <spring-social.version>2.0.0.NEMESIS-RELEASE</spring-social.version>
         <spring-social-twitter.version>2.0.2.NEMESIS-RELEASE</spring-social-twitter.version>
