Add jackson-jts module to serialize/deserialize geo objects.

--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,7 @@
         <!-- Uprade only after jackson-datatype-money upgrade-->
         <javamoney.version>1.1</javamoney.version>
         <jackson-datatype-money.version>1.0.2</jackson-datatype-money.version>
+        <jackson-datatype-jts.version>2.4</jackson-datatype-jts.version>
         <javauom.version>1.0</javauom.version>
         <javauom-ri.version>1.2</javauom-ri.version>
         <javauom-si.version>0.8</javauom-si.version>
@@ -1312,6 +1313,11 @@
                 <groupId>com.opower.unitsofmeasure</groupId>
                 <artifactId>jackson-module-unitsofmeasure</artifactId>
                 <version>${javauom-jackson-module.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.bedatadriven</groupId>
+                <artifactId>jackson-datatype-jts</artifactId>
+                <version>${jackson-datatype-jts.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.searchbox</groupId>
