--- a/pom.xml
+++ b/pom.xml
@@ -172,7 +172,7 @@
         <!-- Remove once boot updates -->
         <!--hazelcast.version>3.7.2</hazelcast.version-->
         <!--hibernate.version>1.2.2</hazelcast-hibernate.version-->
-        <!--infinispan.version>8.1.0.Final</infinispan.version-->
+        <infinispan.version>9.1.7.Final</infinispan.version>
         <java.version>1.8</java.version>
         <!-- Uprade only after jackson-datatype-money upgrade-->
         <javamoney.version>1.1</javamoney.version>
@@ -817,6 +817,11 @@
                 <groupId>com.github.javaparser</groupId>
                 <artifactId>javaparser-core</artifactId>
                 <version>${javaparser.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.codelibs.elasticsearch.module</groupId>
+                <artifactId>analysis-common</artifactId>
+                <version>${elasticsearch.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.jawr</groupId>
