--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
         <checkstyle.violation.ignore>RedundantThrows,NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength
         </checkstyle.violation.ignore>
         <classindex.version>3.4</classindex.version>
-        <codemodel.version>3.0.2</codemodel.version>
+        <codemodel.version>3.2.0</codemodel.version>
         <codemirror-webjars.version>5.1</codemirror-webjars.version>
         <commons-beanutils.version>1.9.3</commons-beanutils.version>
         <commons-collections4.version>4.1</commons-collections4.version>
@@ -139,7 +139,7 @@
         <commons-jcs.version>2.2</commons-jcs.version>
         <commons-text.version>1.3</commons-text.version>
         <compile-testing.version>0.15</compile-testing.version>
-        <cybersource.version>6.2.5</cybersource.version>
+        <cybersource.version>6.2.6</cybersource.version>
         <cxf-xjc-plugin.version>3.2.1</cxf-xjc-plugin.version>
         <cxf-codegen-plugin.version>3.2.2</cxf-codegen-plugin.version>
         <cxf.codegenplugin.forkmode>once</cxf.codegenplugin.forkmode>
@@ -152,9 +152,9 @@
         <failsafe.parallel />
         <failsafe.useUnlimitedThreads />
         <fontawesome-webjars.version>4.6.3</fontawesome-webjars.version>
-        <flying-saucer.version>9.1.12</flying-saucer.version>
+        <flying-saucer.version>9.1.16</flying-saucer.version>
         <gemfire.version>9.3.0</gemfire.version>
-        <geotools.version>19.0</geotools.version>
+        <geotools.version>20.1</geotools.version>
         <github-com-gregra81-jqzoom-webjars.version>1.0.1</github-com-gregra81-jqzoom-webjars.version>
         <google-concurrentlinkedhashmap.version>1.4.2</google-concurrentlinkedhashmap.version>
         <google-cloud-storage.version>1.0.1</google-cloud-storage.version>
@@ -165,9 +165,9 @@
         <guava.version>23.0</guava.version>
         <handlebars-webjars.version>4.0.2</handlebars-webjars.version>
         <hazelcast-quartz.version>1.0.4</hazelcast-quartz.version>
-        <hibernate.version>5.2.17.Final</hibernate.version>
+        <!--hibernate.version>5.2.17.Final</hibernate.version>
         <hibernate-validator5.version>5.4.2.Final</hibernate-validator5.version>
-        <hibernate.ogm.version>5.1.0.Final</hibernate.ogm.version>
+        <hibernate.ogm.version>5.1.0.Final</hibernate.ogm.version-->
         <hibernate-hydrate.version>5.2.0</hibernate-hydrate.version>
         <!-- Remove once boot updates -->
         <!--hazelcast.version>3.7.2</hazelcast.version-->
@@ -181,10 +181,10 @@
         <javauom.version>1.0</javauom.version>
         <javauom-ri.version>1.2</javauom-ri.version>
         <javauom-si.version>0.8</javauom-si.version>
-        <javauom-se.version>1.0.8</javauom-se.version>
-        <javauom-systems.version>0.7.2</javauom-systems.version>
+        <javauom-se.version>1.0.9</javauom-se.version>
+        <javauom-systems.version>0.9</javauom-systems.version>
         <javauom-jackson-module.version>1.3.5.NEMESIS-RELEASE</javauom-jackson-module.version>
-        <javaparser.version>3.5.4</javaparser.version>
+        <javaparser.version>3.8.0</javaparser.version>
         <java-types.version>1.0.1</java-types.version>
         <javax-inject.version>1</javax-inject.version>
         <jsr250.version>1.0</jsr250.version>
@@ -194,7 +194,7 @@
         <jawr.version>3.13.NEMESIS-RELEASE</jawr.version>
         <jaxb.version>2.3.0.1</jaxb.version>
         <jcip.version>1.0</jcip.version>
-        <jest.version>5.3.3</jest.version>
+        <jest.version>6.3.1</jest.version>
         <jgravatar.version>1.1</jgravatar.version>
         <jadira-usertype.version>7.0.0.CR1</jadira-usertype.version>
         <jmeter-maven-plugin.version>1.10.1</jmeter-maven-plugin.version>
@@ -277,8 +277,8 @@
         <opencmis.version>1.1.0</opencmis.version>
         <olingo-odata2.version>2.0.9</olingo-odata2.version>
         <olingo-odata4.version>4.4.0</olingo-odata4.version>
-        <openpdf.version>1.0.5</openpdf.version>
-        <oracle.version>12.2.0.1</oracle.version>
+        <openpdf.version>1.2.5</openpdf.version>
+        <oracle.version>18.3.0.0</oracle.version>
         <orika.version>1.5.3-nemesis</orika.version>
         <paypal-sdk.version>2.15.122</paypal-sdk.version>
         <paypal-rest-sdk.version>1.14.0</paypal-rest-sdk.version>
@@ -292,15 +292,15 @@
         <project-scm.id>github</project-scm.id>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <protobuf.version>3.5.1</protobuf.version>
+        <protobuf.version>3.6.1</protobuf.version>
         <protobuf-java-format.version>1.4</protobuf-java-format.version>
         <recaptcha4j.version>0.0.7</recaptcha4j.version>
         <reflections.version>0.9.10</reflections.version>
         <redis-embedded.version>0.6</redis-embedded.version>
         <redis-hibernate.version>2.4.0</redis-hibernate.version>
         <redis-quartz.version>1.1.13</redis-quartz.version>
-        <riskified.version>1.0.9</riskified.version>
-        <rometools.version>1.9.0</rometools.version>
+        <riskified.version>1.1.0</riskified.version>
+        <rometools.version>1.11.1</rometools.version>
         <selenium.version>3.8.1</selenium.version>
         <selenium-htmlunit.version>3.8.1</selenium-htmlunit.version>
         <smartsprites.version>0.2.13</smartsprites.version>
@@ -314,7 +314,7 @@
         <pace-webjars.version>1.0.2</pace-webjars.version>
         <select2-webjars.version>4.0.3</select2-webjars.version>
         <sockjsclient-webjars.version>1.0.3</sockjsclient-webjars.version>
-        <spotbugs.version>3.1.5</spotbugs.version>
+        <spotbugs.version>3.1.8</spotbugs.version>
         <spotbugs.omitvisitors>SerializableIdiom</spotbugs.omitvisitors>
         <stacktable-webjars.version>1.0.1</stacktable-webjars.version>
         <!--spring.version>5.1.0.BUILD-SNAPSHOT</spring.version-->
@@ -329,8 +329,8 @@
         <spring-social-facebook.version>3.0.0.NEMESIS-RELEASE</spring-social-facebook.version>
         <junit-surefire-provider.version>1.1.0</junit-surefire-provider.version>
         <supercsv.version>2.4.0</supercsv.version>
-        <stripe-api.version>5.35.1</stripe-api.version>
-        <klarna-sdk.version>2.2.1</klarna-sdk.version>
+        <stripe-api.version>7.8.0</stripe-api.version>
+        <klarna-sdk.version>3.0.2</klarna-sdk.version>
         <stompwebsocket-webjars.version>2.3.4</stompwebsocket-webjars.version>
         <tika-parsers.version>1.13</tika-parsers.version>
         <thymeleaf-layout-dialect.version>2.3.0</thymeleaf-layout-dialect.version>
@@ -338,7 +338,7 @@
         <thymeleaf-layout-dialect.version>2.0.1</thymeleaf-layout-dialect.version-->
         <thymeleaf-jawr.version>2.0.2.NEMESIS-RELEASE</thymeleaf-jawr.version>
         <thymeleaf-extras-springsecurity4.version>3.0.2.RELEASE</thymeleaf-extras-springsecurity4.version>
-        <twilio-sdk.version>7.18.0</twilio-sdk.version>
+        <twilio-sdk.version>7.31.0</twilio-sdk.version>
         <wagon.version>3.0.0</wagon.version>
         <webjars-locator.version>0.31</webjars-locator.version>
         <wuic.version>0.5.2.RC1</wuic.version>
@@ -696,11 +696,11 @@
                 <artifactId>ucp</artifactId>
                 <version>${oracle.version}</version>
             </dependency>
-            <dependency>
+            <!--dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-validator</artifactId>
                 <version>${hibernate-validator5.version}</version>
-            </dependency>
+            </dependency-->
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-ehcache</artifactId>
