--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,7 @@
         <fontawesome-webjars.version>4.6.3</fontawesome-webjars.version>
         <flying-saucer.version>9.1.16</flying-saucer.version>
         <gemfire.version>9.3.0</gemfire.version>
-        <geotools.version>20.1</geotools.version>
+        <geotools.version>19.0</geotools.version>
         <github-com-gregra81-jqzoom-webjars.version>1.0.1</github-com-gregra81-jqzoom-webjars.version>
         <google-concurrentlinkedhashmap.version>1.4.2</google-concurrentlinkedhashmap.version>
         <google-cloud-storage.version>1.0.1</google-cloud-storage.version>
@@ -165,9 +165,9 @@
         <guava.version>23.0</guava.version>
         <handlebars-webjars.version>4.0.2</handlebars-webjars.version>
         <hazelcast-quartz.version>1.0.4</hazelcast-quartz.version>
-        <!--hibernate.version>5.2.17.Final</hibernate.version>
+        <hibernate.version>5.2.17.Final</hibernate.version>
         <hibernate-validator5.version>5.4.2.Final</hibernate-validator5.version>
-        <hibernate.ogm.version>5.1.0.Final</hibernate.ogm.version-->
+        <hibernate.ogm.version>5.1.0.Final</hibernate.ogm.version>
         <hibernate-hydrate.version>5.2.0</hibernate-hydrate.version>
         <!-- Remove once boot updates -->
         <!--hazelcast.version>3.7.2</hazelcast.version-->
