--- a/pom.xml
+++ b/pom.xml
@@ -165,7 +165,7 @@
         <guava.version>23.0</guava.version>
         <handlebars-webjars.version>4.0.2</handlebars-webjars.version>
         <hazelcast-quartz.version>1.0.4</hazelcast-quartz.version>
-        <!--hibernate.version>5.2.17.Final</hibernate.version-->
+        <hibernate.version>5.2.17.Final</hibernate.version>
         <hibernate.ogm.version>5.1.0.Final</hibernate.ogm.version>
         <hibernate-hydrate.version>5.2.0</hibernate-hydrate.version>
         <!-- Remove once boot updates -->
@@ -223,7 +223,7 @@
         <jstree.version>3.3.3</jstree.version>
         <jstree-bootstrap-theme.version>1.0.1</jstree-bootstrap-theme.version>
         <jedis.version>2.9.0</jedis.version>
-        <license-maven-plugin>1.13</license-maven-plugin>
+        <license-maven-plugin>1.16</license-maven-plugin>
         <!--kie.version>7.8.0-SNAPSHOT</kie.version-->
         <kie.version>7.14.0.Final</kie.version>
         <magicsuggest-webjars.version>2.1.4</magicsuggest-webjars.version>
