--- a/pom.xml
+++ b/pom.xml
@@ -174,8 +174,8 @@
         <infinispan.version>9.1.7.Final</infinispan.version>
         <java.version>1.8</java.version>
         <!-- Uprade only after jackson-datatype-money upgrade-->
-        <javamoney.version>1.1</javamoney.version>
-        <jackson-datatype-money.version>1.0.2</jackson-datatype-money.version>
+        <javamoney.version>1.3</javamoney.version>
+        <jackson-datatype-money.version>1.1.1</jackson-datatype-money.version>
         <jackson-datatype-jts.version>2.4</jackson-datatype-jts.version>
         <javauom.version>1.0</javauom.version>
         <javauom-ri.version>1.2</javauom-ri.version>
@@ -1220,6 +1220,7 @@
                 <groupId>org.javamoney</groupId>
                 <artifactId>moneta</artifactId>
                 <version>${javamoney.version}</version>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.zalando</groupId>
