--- a/pom.xml
+++ b/pom.xml
@@ -2431,6 +2431,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jarsigner-plugin</artifactId>
             </plugin-->
+            <plugin>
+                <groupId>com.nemesis</groupId>
+                <artifactId>nemesis-maven-plugin</artifactId>
+                <version>${nemesis.version}</version>
+            </plugin>
         </plugins>
     </build>
 
