--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.3.RELEASE</version>
+        <version>2.1.4.BUILD-SNAPSHOT</version>
         <relativePath />
     </parent>
 
@@ -2431,11 +2431,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jarsigner-plugin</artifactId>
             </plugin-->
-            <plugin>
-                <groupId>com.nemesis</groupId>
-                <artifactId>nemesis-maven-plugin</artifactId>
-                <version>${nemesis.version}</version>
-            </plugin>
         </plugins>
     </build>
 
