--- a/pom.xml
+++ b/pom.xml
@@ -120,14 +120,14 @@
     </distributionManagement>
 
     <properties>
-        <amazon-aws-sdk.version>1.11.313</amazon-aws-sdk.version>
-        <asciidoctor.version>1.5.4-NEMESIS-RELEASE</asciidoctor.version>
-        <asciidoctorj-diagram.version>1.3.1</asciidoctorj-diagram.version>
+        <amazon-aws-sdk.version>1.11.538</amazon-aws-sdk.version>
+        <asciidoctor.version>1.6.0</asciidoctor.version>
+        <asciidoctorj-diagram.version>1.5.16</asciidoctorj-diagram.version>
         <atmosphere.version>2.2.6</atmosphere.version>
         <checkstyle.violation.ignore>RedundantThrows,NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength
         </checkstyle.violation.ignore>
         <classindex.version>3.4</classindex.version>
-        <codemodel.version>3.2.0</codemodel.version>
+        <codemodel.version>3.2.3</codemodel.version>
         <codemirror-webjars.version>5.1</codemirror-webjars.version>
         <commons-beanutils.version>1.9.3</commons-beanutils.version>
         <commons-collections4.version>4.1</commons-collections4.version>
@@ -145,7 +145,7 @@
         <cxf.codegenplugin.forkmode>once</cxf.codegenplugin.forkmode>
         <cxf.xjc.jvmArgs />
         <docker-maven-plugin.version>1.0.0</docker-maven-plugin.version>
-        <doxia.version>1.7</doxia.version>
+        <doxia.version>1.8</doxia.version>
         <ehcache-jcache.version>1.0.1</ehcache-jcache.version>
         <elasticsearch-head-webjars.version>5.0.0</elasticsearch-head-webjars.version>
         <extjs-webjars.version>5.1.1-light</extjs-webjars.version>
@@ -154,7 +154,7 @@
         <fontawesome-webjars.version>4.6.3</fontawesome-webjars.version>
         <flying-saucer.version>9.1.16</flying-saucer.version>
         <gemfire.version>9.3.0</gemfire.version>
-        <geotools.version>19.0</geotools.version>
+        <geotools.version>21.0</geotools.version>
         <github-com-gregra81-jqzoom-webjars.version>1.0.1</github-com-gregra81-jqzoom-webjars.version>
         <google-concurrentlinkedhashmap.version>1.4.2</google-concurrentlinkedhashmap.version>
         <google-cloud-storage.version>1.0.1</google-cloud-storage.version>
@@ -167,7 +167,7 @@
         <hazelcast-quartz.version>1.0.4</hazelcast-quartz.version>
         <hibernate.version>5.2.17.Final</hibernate.version>
         <hibernate.ogm.version>5.1.0.Final</hibernate.ogm.version>
-        <hibernate-hydrate.version>5.2.0</hibernate-hydrate.version>
+        <hibernate-hydrate.version>5.2.1</hibernate-hydrate.version>
         <!-- Remove once boot updates -->
         <!--hazelcast.version>3.7.2</hazelcast.version-->
         <!--hazelcast-hibernate.version>1.2.2</hazelcast-hibernate.version-->
@@ -225,7 +225,7 @@
         <jedis.version>2.9.0</jedis.version>
         <license-maven-plugin>1.16</license-maven-plugin>
         <!--kie.version>7.8.0-SNAPSHOT</kie.version-->
-        <kie.version>7.14.0.Final</kie.version>
+        <kie.version>7.20.0.Final</kie.version>
         <magicsuggest-webjars.version>2.1.4</magicsuggest-webjars.version>
         <materializecss-webjars.version>0.98.1</materializecss-webjars.version>
         <maven-archetype-plugin.version>3.0.1</maven-archetype-plugin.version>
@@ -260,7 +260,7 @@
         <maven-surefire-plugin.skip>false</maven-surefire-plugin.skip>
         <maven-remote-resources-plugin.skip>false</maven-remote-resources-plugin.skip>
         <maven-compiler-test-compile.skip>false</maven-compiler-test-compile.skip>
-        <maven-extraenforcer.version>1.0-beta-7</maven-extraenforcer.version>
+        <maven-extraenforcer.version>1.2</maven-extraenforcer.version>
         <maven-cargo.plugin>1.4.3</maven-cargo.plugin>
         <maven-tomcat7.plugin>2.2</maven-tomcat7.plugin>
         <maven-build-helper-plugin.version>1.8</maven-build-helper-plugin.version>
@@ -276,7 +276,7 @@
         <opencmis.version>1.1.0</opencmis.version>
         <olingo-odata2.version>2.0.9</olingo-odata2.version>
         <olingo-odata4.version>4.4.0</olingo-odata4.version>
-        <openpdf.version>1.2.5</openpdf.version>
+        <openpdf.version>1.2.16</openpdf.version>
         <oracle.version>12.2.0.1</oracle.version>
         <orika.version>1.5.3-nemesis</orika.version>
         <paypal-sdk.version>2.15.122</paypal-sdk.version>
@@ -330,8 +330,8 @@
         <spring-social-facebook.version>3.0.0.NEMESIS-RELEASE</spring-social-facebook.version>
         <junit-surefire-provider.version>1.1.0</junit-surefire-provider.version>
         <supercsv.version>2.4.0</supercsv.version>
-        <stripe-api.version>7.8.0</stripe-api.version>
-        <klarna-sdk.version>3.0.2</klarna-sdk.version>
+        <stripe-api.version>9.4.0</stripe-api.version>
+        <klarna-sdk.version>3.0.6</klarna-sdk.version>
         <stompwebsocket-webjars.version>2.3.4</stompwebsocket-webjars.version>
         <tika-parsers.version>1.13</tika-parsers.version>
         <thymeleaf-layout-dialect.version>2.3.0</thymeleaf-layout-dialect.version>
@@ -339,8 +339,8 @@
         <thymeleaf-layout-dialect.version>2.0.1</thymeleaf-layout-dialect.version-->
         <thymeleaf-jawr.version>2.0.2.NEMESIS-RELEASE</thymeleaf-jawr.version>
         <thymeleaf-extras-springsecurity4.version>3.0.2.RELEASE</thymeleaf-extras-springsecurity4.version>
-        <twilio-sdk.version>7.31.0</twilio-sdk.version>
-        <wagon.version>3.0.0</wagon.version>
+        <twilio-sdk.version>7.37.2</twilio-sdk.version>
+        <wagon.version>3.3.2</wagon.version>
         <webjars-locator.version>0.31</webjars-locator.version>
         <wuic.version>0.5.2.RC1</wuic.version>
         <!-- the 18.xx version requires Java9 -->
@@ -348,7 +348,7 @@
         <xml-apis.version>1.4.01</xml-apis.version> <!-- xml-apis has latest version of 1.4.01 - do not UPDATE -->
         <xalan.version>2.7.2</xalan.version>
         <xstream.version>1.4.10</xstream.version>
-        <yubico.version>3.0.2</yubico.version>
+        <yubico.version>3.0.5</yubico.version>
         <zxing.version>3.3.3</zxing.version>
     </properties>
 
@@ -2047,12 +2047,13 @@
                     <artifactId>maven-release-plugin</artifactId>
                     <version>${maven-release-plugin.version}</version>
                     <configuration>
-                        <releaseProfiles>apache-release</releaseProfiles>
-                        <useReleaseProfile>false</useReleaseProfile>
-                        <goals>deploy</goals>
+                        <releaseProfiles>nemesis-release</releaseProfiles>
+                        <useReleaseProfile>true</useReleaseProfile>
                         <scmCommentPrefix>[maven-release-plugin][ci skip]</scmCommentPrefix>
                         <localCheckout>true</localCheckout>
                         <tagNameFormat>v@{project.version}</tagNameFormat>
+                        <preparationGoals>site-deploy</preparationGoals>
+                        <completionGoals>site-deploy</completionGoals>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -2518,6 +2519,18 @@
                 <maven-spotbugs-plugin.skip>true</maven-spotbugs-plugin.skip>
                 <maven-rat-plugin.skip>true</maven-rat-plugin.skip>
                 <!--maven-compiler-test-compile.skip>true</maven-compiler-test-compile.skip-->
+            </properties>
+        </profile>
+        <profile>
+            <id>nemesis-release</id>
+            <properties>
+                <maven-javadoc-plugin.skip>false</maven-javadoc-plugin.skip>
+                <maven-javadoc-plugin.attach>true</maven-javadoc-plugin.attach>
+                <maven-checkstyle-plugin.skip>true</maven-checkstyle-plugin.skip>
+                <maven-remote-resources-plugin.skip>true</maven-remote-resources-plugin.skip>
+                <maven-pmd-plugin.skip>true</maven-pmd-plugin.skip>
+                <maven-spotbugs-plugin.skip>true</maven-spotbugs-plugin.skip>
+                <maven-rat-plugin.skip>true</maven-rat-plugin.skip>
             </properties>
         </profile>
         <profile>
