--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.4.BUILD-SNAPSHOT</version>
+        <version>2.1.3.RELEASE</version>
         <relativePath />
     </parent>
 
